# micyte

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/contracts/: README.md  datum_document_naming_taxonomy.md  datum_editing_atomicity.md  interface_panel_component_frame_contract.md  mos_authority_enforcement.md  mos_database_schema_addendum.md  mutation_contract.md  portal_panel_state_distinction.md  portal_shell_contract.md  portal_vocabulary_glossary.md  route_model.md  samras_engine_ui_boundary.md  samras_structural_model.md  samras_validity_and_mutation.md  service_tool_peripheral_package_contract.md  surface_catalog.md
docs/contracts/msn_profile_and_contact_card/: README.md
docs/contracts/mss_binary_sequence/: README.md  (+3 more)
docs/standards/: portal_shell_refactor_guardrails.md
docs/wiki/: 00-overview-and-glossary.md  05-engineering-standards.md  10-l1-core-engine.md  20-l2-surface-persistence.md  30-l3-shell-runtime-ui.md  40-tools-and-lenses-asbuilt.md  50-delta-map.md  60-canonical-datum-and-hyphae-flags.md  61-mss-and-hyphae-form-spec.md  70-yaml-materialization-pipeline.md  80-tool-authoring-guide.md  81-lens-authoring-guide.md  82-demo-sandbox-cookbook.md  90-network-contract-architecture.md  95-desktop-app-local-db.md  99-roadmap.md  README.md  separation_and_responsibility.md
micyte/: __init__.py
micyte/agro/: __init__.py  doc_lib.py
micyte/core/: README.md  allowed_dependencies.md  datum_documents.py  forbidden_dependencies.md  instances.py  references.py
micyte/data_templates/: agro_erp_taxonomy_source.yaml  fnd_newsletter_contact_log.yaml  product_profile.yaml
micyte/domains/: allowed_dependencies.md  forbidden_dependencies.md
micyte/ports/: README.md  allowed_dependencies.md  forbidden_dependencies.md
micyte/state_machine/: README.md  allowed_dependencies.md  forbidden_dependencies.md
micyte/tools/: README.md  __init__.py  _archetype.py  _consumption.py  _contract.py  _hops_dates.py  agro_calendar_viewer.py  agronomics_viewer.py  allowed_dependencies.md  contacts_viewer.py  contracts_tool.py  entity_profile_table.py  farm_profile_viewer.py  geospatial_projection_viewer.py  inventory_manager.py  local_domain_viewer.py  network_map_viewer.py  object_profiles_view.py  objects_viewer.py  onboarding.py  planting_calendar_viewer.py  planting_map_viewer.py  plot_manager_viewer.py  plot_overview_viewer.py  plots_viewer.py  product_document_view.py  profile_card_viewer.py  profile_projection.py  record_studio.py  record_synopsis.py  record_viewer.py  registrar_portal_viewer.py  samras_structure_viewer.py  taxa_product_table.py  taxonomy_domain_viewer.py  workbench_ui_view.py
scripts/: release_gate_scan.py
(+65 files in other folders)
